# mastermind

./: .gitignore  Agent.cpp  Agent.h  CMakeLists.txt  Controller.cpp  Controller.h  Environment.cpp  Environment.h  Makefile  README  State.cpp  State.h  agent.cc  agent.h  environment.cc  environment.h  main.cc  main.cpp  state.cc  state.h  test.cpp
